feat(44): add endpoint for city cards
