# src/cities/cities.controller.ts
@@ -200,6 +200,74 @@ export class CitiesController {
     }
   }
 
+  @Get('cards')
+  @ApiOperation({
+    summary: "Return cities within map bounds (optional limit).",
+  })
+  @ApiResponse({
+    status: 200,
+    description: "Successfully retrieved cities within bounds.",
+    isArray: true,
+    type: CityDto,
+    examples: {
+      "application/json": {
+        summary: "Array of CityDTO",
+        value: {
+          data: [
+            {
+              id: 1,
+              name: "Amsterdam",
+              country: "Netherlands",
+              countriesId: 1,
+              search: "Amsterdam",
+              lat: 52.1234,
+              lng: 12.1234,
+              size: 100000,
+              seaside: true,
+            },
+            {
+              id: 2,
+              name: "Rotterdam",
+              country: "Netherlands",
+              countriesId: 1,
+              search: "Rotterdam",
+              lat: 52.1234,
+              lng: 12.1234,
+              size: 100000,
+              seaside: true,
+            },
+          ],
+          total: 100,
+          limit: 10,
+        },
+      },
+    },
+  })
+  async getCityCards(@Query() filters: CitiesQueryDto) {
+    const {
+      take = "30",
+      sortBy = "name",
+      order = "asc",
+      fromId,
+      country,
+    } = filters;
+    try {
+      const parsedTake = Math.min(parseInt(take || "30", 10), 300);
+
+      return await this.citiesService.getAllCards(
+        parsedTake,
+        sortBy,
+        order,
+        fromId ? parseInt(fromId, 10) : undefined,
+        country
+      );
+    } catch (error: any) {
+      throw new BadRequestException(
+        error.message || "An error occurred while fetching the cities"
+      );
+    }
+  }
+
   @Get("missing-social-report")
   @ApiOperation({
     summary: "Get cities without a specific social lifestyle report type",
