# src/swagger-doc.json
@@ -270,6 +270,64 @@
         ]
       }
     },
+    "/cities/cards": {
+      "get": {
+        "operationId": "CitiesController_getCityCards",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Successfully retrieved cities within bounds.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/CityDto"
+                  }
+                },
+                "examples": {
+                  "application/json": {
+                    "summary": "Array of CityDTO",
+                    "value": {
+                      "data": [
+                        {
+                          "id": 1,
+                          "name": "Amsterdam",
+                          "country": "Netherlands",
+                          "countriesId": 1,
+                          "search": "Amsterdam",
+                          "lat": 52.1234,
+                          "lng": 12.1234,
+                          "size": 100000,
+                          "seaside": true
+                        },
+                        {
+                          "id": 2,
+                          "name": "Rotterdam",
+                          "country": "Netherlands",
+                          "countriesId": 1,
+                          "search": "Rotterdam",
+                          "lat": 52.1234,
+                          "lng": 12.1234,
+                          "size": 100000,
+                          "seaside": true
+                        }
+                      ],
+                      "total": 100,
+                      "limit": 10
+                    }
+                  }
+                }
+              }
+            }
+          }
+        },
+        "summary": "Return cities within map bounds (optional limit).",
+        "tags": [
+          "cities"
+        ]
+      }
+    },
     "/cities/missing-social-report": {
       "get": {
         "operationId": "CitiesController_getCitiesWithoutSocialReport",
